--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>Biblioteca Virtual</h3>
-                    <p>Proyecto de grado 11 - Colegio Ejemplo</p>
+                    <p>Proyecto de grado 11 - Institución Educativa John F. Kennedy</p>
                     <p>Acceso a la cultura y el conocimiento para todos.</p>
                 </div>
                 
@@ -95,7 +95,7 @@
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Biblioteca Virtual - Proyecto Grado 11. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Biblioteca Virtual - Proyecto Grado 11. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
@@ -103,3 +103,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
