--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     </section>
 
     <!-- Catálogo de libros -->
-    <section class="catalog" id="catalogo">
-        <div class="container">
-            <h2 class="section-title">Libros Destacados</h2>
-            <div class="books-grid" id="books-grid">
-                <!-- Los libros se cargarán con JavaScript -->
-            </div>
+<section class="catalog" id="catalogo">
+    <div class="container">
+        <h2 class="section-title">Todos Nuestros Libros</h2>
+        <div class="books-grid" id="books-grid">
+            <!-- Todos los libros se cargarán aquí automáticamente -->
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Sección de categorías -->
     <section class="categories" id="categorias">
@@ -100,3 +100,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
